更新：nodejs重写前端，前后端分离，尝试8bit,bf16均失败，修复一系列bug

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ __pycache__/
 *.log
 myapp/backend.log
 
+# --- Node.js ---
+node_modules/
+npm-debug.log
+yarn-error.log
+
 # --- IDE Settings (排除编辑器配置) ---
 .vscode/
 .idea/
