--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,12 @@ yarn-error.log
 .DS_Store
 Thumbs.db
 
-# --- Optional: Exclude large datasets if you have any ---
+# --- Datasets (排除数据集) ---
 notebooks/data/
+myapp/data/
+data/
+datasets/
+*.dcm
+*.nii
+*.nii.gz
+*.svs
